--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,6 +51,9 @@
         <action
             android:id="@+id/review_to_review_search"
             app:destination="@id/navigation_review_search" />
+        <action
+            android:id="@+id/review_to_cafe_detail"
+            app:destination="@id/navigation_cafe_detail" />
     </fragment>
 
     <fragment
