--- a/app/src/main/res/layout/fragment_cafe_delete.xml
+++ b/app/src/main/res/layout/fragment_cafe_delete.xml
@@ -167,7 +167,7 @@
                 android:id="@+id/constraintLayout6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/footer"
+                app:layout_constraintBottom_toTopOf="@+id/deletePage_footer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
@@ -202,13 +202,13 @@
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
                     android:paddingBottom="10dp"
-                    app:layout_constraintBottom_toTopOf="@+id/request_button2"
+                    app:layout_constraintBottom_toTopOf="@+id/delete_request_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/delete_cafe_reason" />
 
                 <Button
-                    android:id="@+id/request_button2"
+                    android:id="@+id/delete_request_button"
                     android:layout_width="108dp"
                     android:layout_height="45dp"
                     android:layout_marginBottom="20dp"
