--- a/app/src/main/res/layout/fragment_cafe_delete.xml
+++ b/app/src/main/res/layout/fragment_cafe_delete.xml
@@ -83,19 +83,21 @@
                     android:layout_marginTop="15dp"
                     android:gravity="center"
                     android:text="요청자 :"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
+
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
-                    android:id="@+id/requester_input3"
+                    android:id="@+id/requester_input"
                     android:layout_width="0dp"
                     android:layout_height="27dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_top_back"
+                    android:enabled="false"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
@@ -126,6 +128,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:inputType="textPersonName"
+                    android:enabled="false"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -154,6 +157,7 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:inputType="textPersonName"
+                    android:enabled="false"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
