--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addCafe_floatingButton"
+        android:id="@+id/review_floatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="15dp"
-        android:backgroundTint="#F6921E"
-        android:src="@drawable/add_cafe_flaoting_button"
+        android:backgroundTint="@color/orange"
+        android:src="@drawable/review_floating"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="@color/white" />
