카페 디테일 리뷰의 좋아요 버튼 xml과 이벤트 추가

--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -124,14 +124,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button
+                <CheckBox
                     android:id="@+id/good_button"
                     android:layout_width="30dp"
                     android:layout_height="45dp"
                     android:layout_gravity="left"
+                    android:button="@null"
                     android:layout_marginLeft="330dp"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/good" />
+                    android:background="@drawable/good_checkbox" />
 
                 <TextView
                     android:id="@+id/good_count_textView"
