--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -120,14 +120,15 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-            <Button
+            <CheckBox
                 android:id="@+id/good_button"
                 android:layout_width="30dp"
                 android:layout_height="45dp"
                 android:layout_gravity="left"
                 android:layout_marginTop="10dp"
+                android:button="@null"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/good"
+                android:background="@drawable/good_checkbox"
                 app:layout_constraintEnd_toStartOf="@+id/good_count_textView"
                 app:layout_constraintTop_toBottomOf="@+id/reviewImage" />
 
