마이페이지, 리뷰 더보기 페이지 수정, 삭제 좋아요 버튼 이벤트추가

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -113,7 +113,13 @@
         android:id="@+id/navigation_cafe_detail_more"
         android:name="com.example.wmc.ui.Fragment.CafeDetailMoreFragment"
         android:label="@string/cafe_detail_more"
-        tools:layout="@layout/fragment_cafe_detail_more" />
+        tools:layout="@layout/fragment_cafe_detail_more" >
+
+        <action
+            android:id="@+id/cafe_detail_more_to_review"
+            app:destination="@id/navigation_review" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/navigation_cafe_modify"
