--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -273,9 +273,11 @@
                     android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
                     app:layout_constraintTop_toBottomOf="@+id/myReview2" />
-                <!--android:nestedScrollingEnabled="false"--><!--리사이클러뷰 스크롤막기-->
-                <!--android:overScrollMode="never"-->
+                <!-- 리사이클러뷰 무한스크롤 위한 코드 276, 277 라인-->
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
