ReviewTagFragment.java 태그 관리를 위한 페이지 재설정
// 기존의 레이어 3개로 관리, 다수의 버튼에서
// 리사이클러뷰 사용하는것으로 변경

--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -57,7 +57,7 @@
                     android:id="@+id/brownFrame3"
                     android:layout_width="350dp"
                     android:layout_height="450dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/tag_v2"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -427,7 +427,7 @@
                     android:id="@+id/constrant_feel"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/beigeFrame2"
                     app:layout_constraintEnd_toEndOf="@+id/beigeFrame2"
                     app:layout_constraintStart_toStartOf="@+id/beigeFrame2"
@@ -1195,8 +1195,8 @@
                     android:id="@+id/addTag_button3"
                     android:layout_width="108dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
                     android:background="@drawable/edge_square_brown"
                     android:text="추가하기"
                     android:textColor="@color/white"
