ReviewTagFragment.java 배경 색 선택되지 않은 메뉴는 투명으로 변경
// colors.xml transper 색상 ( 투명 색상 ) 추가
// fragment_review_tag.xml 메뉴 초기값 또한 투명으로 설정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="inputColor">#FFF4E9DD</color>
     <color name="login_background_color">#FFF4E9DD</color>
     <color name="colorAccent">#F6921E</color>
+    <color name="transper">#00000000</color>
 </resources>
