--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -102,9 +102,9 @@
                         android:id="@+id/feelingImage7"
                         android:layout_width="100dp"
                         android:layout_height="26dp"
-                        android:layout_marginBottom="350dp"
-                        android:src="@drawable/edge_top_back_brown"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="349dp"
+                        android:src="@color/transper"
+                        app:layout_constraintBottom_toBottomOf="@+id/tag_recycle"
                         app:layout_constraintEnd_toStartOf="@+id/serviceimage7"
                         app:layout_constraintStart_toEndOf="@+id/tasteimage7" />
 
@@ -112,7 +112,7 @@
                         android:id="@+id/serviceimage7"
                         android:layout_width="100dp"
                         android:layout_height="26dp"
-                        android:src="@drawable/edge_top_back_brown"
+                        android:src="@color/transper"
                         app:layout_constraintBottom_toBottomOf="@+id/feelingImage7"
                         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -155,11 +155,10 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/tag_recycle"
                         android:layout_width="0dp"
-                        android:layout_height="0dp"
+                        android:layout_height="350dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/feelingImage7" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
