리뷰 태그에서 리뷰페이지로 네비게이션 추가 + 리뷰태그의 추가하기 버튼 클릭 이벤트 추가

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -145,7 +145,12 @@
         android:id="@+id/navigation_review_tag"
         android:name="com.example.wmc.ui.Fragment.ReviewTagFragment"
         android:label="@string/review_tag"
-        tools:layout="@layout/fragment_review_tag" />
+        tools:layout="@layout/fragment_review_tag" >
+
+        <action
+            android:id="@+id/review_tag_to_review"
+            app:destination="@id/navigation_review" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_review_comment"
