--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -536,9 +536,10 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text=""
-                    android:textColor="#000000"
-                    android:textSize="25sp"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
@@ -549,9 +550,10 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text=""
-                    android:textColor="#000000"
-                    android:textSize="25sp"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/select_tag3"
                     app:layout_constraintStart_toEndOf="@+id/select_tag1"
@@ -564,9 +566,10 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/selected_tag_textview"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text=""
-                    android:textColor="#000000"
-                    android:textSize="25sp"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/addTag_cafe_button"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
