--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -404,8 +404,9 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/basicTag_textView" />
@@ -416,9 +417,10 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/basic_tag3"
                     app:layout_constraintStart_toEndOf="@+id/basic_tag1"
@@ -431,9 +433,10 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/selected_tag_textview"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="25sp"
+                    android:textColor="@color/brown"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/add_tag_button"
                     app:layout_constraintTop_toBottomOf="@+id/basicTag_textView" />
