--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -40,10 +40,13 @@
 
         <TextView
             android:id="@+id/moreReview2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="카페명_example"
-            android:textColor="#000000"
+            android:textColor="@color/black"
+            android:layout_marginRight="54dp"
+            android:paddingStart="54dp"
+            android:gravity="center"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -133,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="#깔끔함"
-                    android:textColor="#3B2314"
+                    android:textColor="@color/brown"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -147,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="#가성비"
-                    android:textColor="#3B2314"
+                    android:textColor="@color/brown"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -182,14 +185,17 @@
 
                 <TextView
                     android:id="@+id/moreReview3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="70dp"
                     android:text="카페명_example"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
+                    android:maxLines="1"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
