fragment_cafe_registration.xml 페이지의 태그는 3개 모두 선택해야 하게 변경
// fragment_cafe_detail.xml 카페 디테일에서 긴 카페 이름은 ... 으로 뜨게 싱글라인 설정
// 힌트 삽입

--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -173,6 +173,7 @@
                     android:layout_marginTop="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:hint="위메카커피 메카점"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -295,6 +296,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:hint="00:00"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -323,6 +325,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:hint="24:00"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -389,11 +392,11 @@
                     android:id="@+id/caution_textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="52dp"
                     android:layout_marginTop="13dp"
                     android:text="※ 3개의 태그를 선택해 주세요."
                     android:textColor="@color/black"
                     android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/basicTag_textView"
                     app:layout_constraintTop_toTopOf="parent" />
 
