--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -127,8 +127,10 @@
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@+id/line11"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                app:layout_constraintVertical_bias="0.0">
 
                 <TextView
                     android:id="@+id/moreReview7"
@@ -187,15 +189,15 @@
                     android:id="@+id/moreReview3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="70dp"
+                    android:layout_marginEnd="20dp"
+                    android:singleLine="true"
                     android:text="카페명_example"
                     android:textColor="@color/black"
-                    android:maxLines="1"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/favorite_checkbox"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -205,8 +207,8 @@
                     android:layout_height="50dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    android:button="@null"
                     android:background="@drawable/favorite_checkbox"
+                    android:button="@null"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
