--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -187,7 +187,7 @@
 
                 <TextView
                     android:id="@+id/moreReview3"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
