작업 한것 아래 각주 설명
// fragment_list_search.xml 푸터의 이미지, 글귀 삭제 후 빈공간으로 둠

// fragment_cafe_registration.xml 텍스트뷰 그래비티 설정

// fragment_cafe_modify.xml 그래비티 및 세부 설정 변경

// fragment_cafe_detail.xml 영업 시간 표시 변경

// CafeModifyFragment.java 번들로 운영시간, 카페 이름, 주수 주고받기 위한 코드 작성

// CafeDetailFragment.java 번들로 운영시간, 카페 이름, 주수 주고받기 위한 코드 작성

--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -213,16 +213,42 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/moreReview8"
-                    android:layout_width="101dp"
-                    android:layout_height="31dp"
-                    android:layout_marginEnd="20dp"
+                    android:id="@+id/moreReview11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:gravity="right"
-                    android:inputType="textMultiLine"
-                    android:text="연중무휴 AM 00:00 PM 00:00"
+                    android:text="~"
                     android:textColor="#000000"
                     android:textIsSelectable="false"
-                    android:textSize="12sp"
+                    android:textSize="14dp"
+                    app:layout_constraintEnd_toStartOf="@+id/moreReview8"
+                    app:layout_constraintTop_toTopOf="@+id/moreReview8" />
+
+                <TextView
+                    android:id="@+id/moreReview10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:gravity="right"
+                    android:text="00:00"
+                    android:textColor="#000000"
+                    android:textIsSelectable="false"
+                    android:textSize="14dp"
+                    app:layout_constraintEnd_toStartOf="@+id/moreReview11"
+                    app:layout_constraintTop_toTopOf="@+id/moreReview11" />
+
+                <TextView
+                    android:id="@+id/moreReview8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="20dp"
+                    android:gravity="right"
+                    android:text="00:00"
+                    android:textColor="#000000"
+                    android:textIsSelectable="false"
+                    android:textSize="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/favorite_checkbox" />
