--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -173,6 +173,7 @@
                     android:layout_marginTop="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:gravity="center_vertical"
                     android:hint="위메카커피 메카점"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
@@ -259,6 +260,7 @@
                     android:layout_marginTop="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:gravity="center_vertical"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -296,6 +298,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:gravity="center_vertical"
                     android:hint="00:00"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
@@ -325,6 +328,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
+                    android:gravity="center_vertical"
                     android:hint="24:00"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
