1. 카페 목록 -> list_cafelist로 변경 2. 기존 충돌 관련 merge 완료

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,6 +14,9 @@
             android:id="@+id/home_to_list"
             app:destination="@id/navigation_list" />
         <action
+            android:id="@+id/home_to_list_cafelist"
+            app:destination="@id/navigation_list_cafelist" />
+        <action
             android:id="@+id/home_to_review"
             app:destination="@id/navigation_review" />
         <action
