--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_list"
+        android:id="@+id/navigation_list_cafelist"
         android:icon="@drawable/list"
         android:title="@string/title_list" />
     <item
