--- a/app/src/main/res/drawable/review_spinner.xml
+++ b/app/src/main/res/drawable/review_spinner.xml
@@ -6,14 +6,14 @@
                 <shape android:shape="rectangle">
                     <solid android:color="@color/orange" />
                     <corners android:radius="12dp" />
-                    <padding android:right="10dp" />
+                    <padding android:right="5dp" />
                 </shape>
             </item>
             <item
                 android:drawable="@drawable/dropdown"
-                android:gravity="center|end"
-                android:width="15dp"
-                android:height="15dp" />
+                android:gravity="center_vertical|end"
+                android:width="12dp"
+                android:height="12dp" />
         </layer-list>
     </item>
 </selector>
