--- a/app/src/main/res/layout/fragment_cafe_detail_more.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail_more.xml
@@ -59,15 +59,14 @@
                 android:id="@+id/reviewSpinner"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:spinnerMode="dialog"
                 android:background="@drawable/review_spinner"
-                android:paddingRight="6dp"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:paddingStart="4dp"
+                android:textAlignment="center"
+                android:paddingRight="8dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
