fragment_review.xml, fragment_review_tag.xml 의 태그 텍스트뷰의 일관성 확보( 텍스트 컬러, 크기 ) 및 태그 박스의 크기 유동성 있게 변경

--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -168,8 +168,8 @@
                     android:layout_height="34dp"
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
-                    android:textColor="@color/black"
                     android:gravity="center"
+                    android:textColor="@color/brown"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/addTag2"
                     app:layout_constraintStart_toStartOf="@+id/brownFrame3"
@@ -181,9 +181,9 @@
                     android:layout_height="34dp"
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
                     android:gravity="center"
+                    android:textColor="@color/brown"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/brownFrame3"
                     app:layout_constraintEnd_toEndOf="@+id/brownFrame3"
                     app:layout_constraintStart_toStartOf="@+id/brownFrame3"
@@ -195,9 +195,9 @@
                     android:layout_height="34dp"
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
                     android:gravity="center"
+                    android:textColor="@color/brown"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/brownFrame3"
                     app:layout_constraintStart_toEndOf="@+id/addTag2"
                     app:layout_constraintTop_toTopOf="@+id/addTag2" />
