--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -102,70 +102,73 @@
                     android:id="@+id/caution_textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="52dp"
                     android:layout_marginTop="23dp"
+                    android:layout_marginEnd="50dp"
                     android:text="※ 최대 3개까지 추가 가능해요!"
                     android:textColor="@color/black"
                     android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tag_textView"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/select_tag1"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
                     android:text=""
                     android:textColor="@color/brown"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
                 <TextView
                     android:id="@+id/select_tag2"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
                     android:text=""
                     android:textColor="@color/brown"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/select_tag3"
                     app:layout_constraintStart_toEndOf="@+id/select_tag1"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
                 <TextView
                     android:id="@+id/select_tag3"
-                    android:layout_width="100dp"
+                    android:layout_width="90dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="10dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
                     android:text=""
                     android:textColor="@color/brown"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/addTag_cafe_button"
+                    app:layout_constraintStart_toEndOf="@+id/select_tag2"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
                 <Button
                     android:id="@+id/addTag_cafe_button"
-                    android:layout_width="60dp"
+                    android:layout_width="0dp"
                     android:layout_height="35dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_square_brown"
                     android:text="추가"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/select_tag3"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
                 <TextView
